--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1204,7 +1204,7 @@
     <string name="btn_sure">Confirm</string>
     <string name="Outlets_Reserve">Outlets  Reserve</string>
     <string name="current_balance">Balance</string>
-    <string name="select_area">Select Area</string>
+    <string name="select_area">Select Region</string>
     <string name="select_city">Select City</string>
     <string name="outlets_address">Outlets Address</string>
     <string name="appointment_time">Appointment</string>
