--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -660,7 +660,8 @@
     <string name="recharge_log_recharge_amount">Số tiền đặt cọc</string>
     <string name="recharge_log_channel_type">Loại kênh</string>
     <string name="recharge_log_order_state">Trạng thái đơn cược</string>
-    <string name="betting_station_type">Trang web đặt hẹn</string>
+    <string name="betting_station_reserve">Trang web đặt hẹn</string>
+    <string name="betting_station_withdraw">Trang web rút tiền</string>
     <string name="withdraw_log_withdraw_amount">Số tiền rút</string>
     <string name="log_state_processing">Đang xử lý</string>
     <string name="withdraw_log_state_pass">Thông qua</string>
