[feature] 3580 1. 棋牌遊戲試玩文案更新  2. 更新 app update, 外觀 icon

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1246,4 +1246,5 @@
     <string name="e_game">E-game</string>
     <string name="casino">Casino</string>
     <string name="sabong">Sabong</string>
+    <string name="new_games_beta">New Games | Beta</string>
 </resources>
