--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1249,5 +1249,6 @@
     <string name="e_game">E-game</string>
     <string name="casino">Casino</string>
     <string name="sabong">Sabong</string>
+    <string name="new_games_beta">New Games | Beta</string>
 
 </resources>
