--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1234,4 +1234,5 @@
     <string name="e_game">Cờ vua</string>
     <string name="casino">Casino</string>
     <string name="sabong">Sabong</string>
+    <string name="new_games_beta">New Games | Beta</string>
 </resources>
