調整 翻譯繁體中文的問題、信用盤的特殊處理

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1226,7 +1226,7 @@
 
     <string name="publicity_contact">联络</string>
     <string name="publicity_faqs">常见问题</string>
-    <string name="more_info">更多資訊</string>
+    <string name="more_info">更多信息</string>
     <string name="e_game">棋牌</string>
     <string name="casino">真人</string>
     <string name="sabong">斗鸡</string>
