调整:注册输入框位置和逻辑 -> stefan

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1185,4 +1185,5 @@
     <string name="tran_time_sub">Giờ giao dịch :</string>
     <string name="redenvelope_amount_sub">Số tiền nhận thực tế：</string>
     <string name="btn_sure">Xác nhận</string>
+    <string name="next_step">Bước phía trước</string>
 </resources>
