--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1234,7 +1234,6 @@
     <string name="phone_">Phone：</string>
     <string name="appointment_">Appointment：</string>
     <string name="outlets_address_">Outlets Address：</string>
-    <string name="error_recharge_amount_smaller">Your amount is below the minimum deposit.</string>
-    <string name="error_recharge_amount_bigger">Your amount exceed the deposit limit.</string>
     <string name="error_recharge_amount_format">The format of the amount you entered is incorrect.</string>
+    <string name="error_amount_limit_exceeded">Amount limit exceeded</string>
 </resources>
