--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1219,7 +1219,7 @@
     <string name="kyc_verify_first">请先进行实名验证。</string>
     <string name="kyc_go_verify">立即前往认证</string>
     <string name="kyc_you_wait">您的实名验证资料已提交，请等待审核认证。</string>
-    <string name="kyc_service_verify">您的实名验证资料已提交，请等待审核认证。</string>
+    <string name="kyc_service_verify">联系客服进行认证</string>
     <string name="kyc_verify_successful">您已完成实名验证！</string>
     <string name="kyc_unverified">未认证</string>
     <string name="kyc_verifying">待审核</string>
