--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1202,8 +1202,7 @@
     <string name="kyc_pick_upload_id2">Mời tải lên giấy tờ nhận dạng hợp lệ của quý khách</string>
     <string name="kyc_size_2_mb">Tập tin không lớn hơn 2MB</string>
     <string name="kyc_contact_service">Nếu có bất kỳ vấn đề nào, hãy liên hệ với CSKH online</string>
-
-
+    <string name="kyc_contact_service_hilight">CSKH online</string>
     <string name="kyc_reset">Cài lại</string>
     <string name="kyc_verify_first">Mời xác minh danh tính trước</string>
     <string name="kyc_go_verify">Xác minh ngay</string>
