波胆数据完善

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -129,7 +129,7 @@
     <string name="home_tab_in_play">TRONG TRẬN</string>
     <string name="home_tab_today">HÔM NAY</string>
     <string name="home_tab_early">CƯỢC SỚM</string>
-    <string name="home_tab_cs">EARLY</string>
+    <string name="home_tab_cs">Kết Quả Đúng</string>
     <string name="home_tab_parlay">CƯỢC XÂU</string>
     <string name="home_tab_outright">CƯỢC CHUNG CUỘC</string>
     <string name="home_tab_at_start">SẮP DIỄN RA</string>
