--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -458,6 +458,12 @@
     <string name="online_gcash">Gcash</string>
     <string name="online_grab">GrabPay</string>
     <string name="online_maya">PayMaya</string>
+    <string name="online_paypal">Paypal</string>
+    <string name="online_gragon_pay">DragonPay</string>
+    <string name="online_momopay">MoMoPay</string>
+    <string name="online_zalopay">ZaloPay</string>
+    <string name="online_viettelpay">ViettelPay</string>
+    <string name="online_recharge_card_pay">Recharge Card</string>
     <string name="online_alipay">Alipay trực tuyến</string>
     <string name="online_weixin">WeChat trực tuyến</string>
     <string name="online_qq">QQ trực tuyến</string>
