--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -461,7 +461,7 @@
     <string name="online_momopay">MoMoPay</string>
     <string name="online_zalopay">ZaloPay</string>
     <string name="online_viettelpay">ViettelPay</string>
-    <string name="online_recharge_card_pay">Recharge Card</string>
+    <string name="online_recharge_card_pay">刮刮卡充值</string>
     <string name="online_alipay">在线支付宝</string>
     <string name="online_weixin">在线微信</string>
     <string name="online_qq">在线QQ</string>
