--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1122,4 +1122,9 @@
 
     <string name="deposits">DEPOSITS</string>
     <string name="withdraw_down">WITHDRAWAL</string>
+    <string name="transaction_record">交易记录明细</string>
+    <string name="transaction_recor">意见反馈</string>
+    <string name="current_version">当前版本</string>
+    <string name="updatable_version">可更新</string>
+    <string name="join_us_win_wealth">加入我们，共赢财富</string>
 </resources>
