--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1122,4 +1122,6 @@
 
     <string name="deposits">DEPOSITS</string>
     <string name="withdraw_down">WITHDRAWAL</string>
+    <string name="my_message">My message</string>
+    <string name="betting_setting">Betting setting</string>
 </resources>
