--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1190,4 +1190,6 @@
     <string name="hint_no_file_selected">未选择档案</string>
     <string name="upload_id_photo">上传证件照片</string>
     <string name="hint_file_selected">已选择档案</string>
+
+    <string name="correct">波胆</string>
 </resources>
