--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -718,6 +718,7 @@
     <string name="myfavorite_notify_detail_remove">从我的盘口中移除</string>
     <string name="statistics_title">数据统计</string>
     <string name="bet_info_list_minimum_limit_amount">投注额小于最低限额</string>
+    <string name="bet_info_list_maximum_limit_amount">投注额大于下注限额</string> <!--F039-->
     <string name="actual_bet">实际下注</string>
     <string name="bet_receipt_all_bet">下注总额</string>
     <string name="third_game_vncp">CG越南彩票</string>
