--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1122,6 +1122,8 @@
 
     <string name="deposits">DEPOSITS</string>
     <string name="withdraw_down">WITHDRAWAL</string>
+    <string name="my_message">My message</string>
+    <string name="betting_setting">Betting setting</string>
     <string name="transaction_record">交易记录明细</string>
     <string name="transaction_recor">意见反馈</string>
     <string name="current_version">当前版本</string>
