--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1118,8 +1118,8 @@
     <string name="outlets_address_">Outlets Address：</string>
     <string name="error_recharge_amount_format">The format of the amount you entered is incorrect.</string>
     <string name="error_amount_limit_exceeded">Amount limit exceeded</string>
-
-
+    <string name="register_currency">Currency</string>
+    <string name="register_nation">Country</string>
     <string name="deposits">DEPOSITS</string>
     <string name="withdraw_down">WITHDRAWAL</string>
     <string name="my_message">My message</string>
@@ -1134,4 +1134,15 @@
     <string name="payment_method">支付方式</string>
 
     <string name="customer_service">如需帮助，请</string>
+
+    <string name="next_step">Next</string>
+    <string name="hint_select_document_type">(Valid ID Type)</string>
+    <string name="hint_select_document_number">(Enter ID number)</string>
+    <string name="identity_number">ID Number</string>
+    <string name="identity_two_number">ID Number [2]</string>
+    <string name="identity_two_type">ID Type [2]</string>
+    <string name="hint_no_file_selected">Unselect files</string>
+    <string name="upload_id_photo">Upload Photo</string>
+    <string name="hint_file_selected">Selected file</string>
+    <string name="error_recommend_agent">No matched</string>
 </resources>
