体育主页修改

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1116,4 +1116,5 @@
     <string name="error_amount_limit_exceeded">Amount limit exceeded</string>
     <string name="my_message">My message</string>
     <string name="betting_setting">Betting setting</string>
+    <string name="filter">filter</string>
 </resources>
