--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1119,4 +1119,5 @@
     <string name="error_amount_limit_exceeded">金额超过限额</string>
     <string name="my_message">我的消息</string>
     <string name="betting_setting">投注设置</string>
+    <string name="filter">筛选</string>
 </resources>
