--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1134,4 +1134,7 @@
     <string name="payment_method">支付方式</string>
 
     <string name="customer_service">如需帮助，请</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="filter">filter</string>
 </resources>
