add:提款银行卡逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1148,4 +1148,5 @@
     <string name="upload_id_photo">Upload Photo</string>
     <string name="hint_file_selected">Selected file</string>
     <string name="error_recommend_agent">No matched</string>
+    <string name="Appointment">预约时间</string>
 </resources>
