--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1214,4 +1214,5 @@
     <string name="upload_id_photo">Upload Photo</string>
     <string name="hint_file_selected">Selected file</string>
     <string name="error_recommend_agent">No matched</string>
+    <string name="local_time">当地时间:</string>
 </resources>
