--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1215,4 +1215,5 @@
     <string name="hint_file_selected">Selected file</string>
     <string name="error_recommend_agent">No matched</string>
     <string name="local_time">当地时间:</string>
+    <string name="register_title">Register</string>
 </resources>
