--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1219,4 +1219,7 @@
     <string name="local_time">当地时间:</string>
     <string name="register_title">Register</string>
     <string name="pls_file_type">请选择文件的类型</string>
+    <string name="click_upload_id_photo">点击上传证件照片</string>
+    <string name="change_other_ID_photos">变更其他证件照</string>
+    <string name="customer_service_help">如需帮助，请联系客服</string>
 </resources>
