--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1191,4 +1191,6 @@
     <string name="upload_id_photo">Upload Photo</string>
 
     <string name="correct">Correct</string>
+    <string name="league_filter">select matches</string>
+    <string name="reverse_select">reverse select</string>
 </resources>
