--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -648,7 +648,7 @@
     <string name="live">真人</string>
     <string name="lottery_description">超过百种彩票玩法任您赢！提供玩家丰富多样的游戏内容，\n致力打造高品质娱乐游戏环境，只为公平、公正的开奖结果。</string>
     <string name="sport_bet_record">体育投注记录</string>
-    <string name="my_favorite">我的赛事</string>
+    <string name="my_favorite">赛事收藏</string>
     <string name="other_bet_record">其他投注记录</string>
     <string name="all_plat_type">全部平台类型</string>
     <string name="visit_first">來去逛逛</string>
@@ -1197,5 +1197,6 @@
     <string name="betting_setting">投注设置</string>
     <string name="filter">筛选</string>
     <string name="register_title">注 册</string>
-
+    <string name="league_filter">赛事筛选</string>
+    <string name="reverse_select">反选</string>
 </resources>
