--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1097,9 +1097,10 @@
     <string name="current_time">Time</string>
 
     <!--region 20220714 新版投注單-->
+    <string name="bet_win">Win</string>
     <string name="bet_stake">Stake</string>
-    <string name="total_capital">Total Stake</string>
-    <string name="total_win_amount">Total Win</string>
+    <string name="total_capital">Stake(%s)：</string>
+    <string name="total_win_amount">Win(%s)：</string>
     <string name="delete_bet">Delete</string>
     <string name="btn_login_bet">Log in to Bet</string>
     <string name="confirm_single_bets">Confirm %d Single Bets</string>
