--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1101,9 +1101,10 @@
     <string name="current_time">当前时间</string>
 
     <!--region 20220714 新版投注單-->
+    <string name="bet_win">可赢</string>
     <string name="bet_stake">本金</string>
-    <string name="total_capital">本金总额</string>
-    <string name="total_win_amount">可赢总额</string>
+    <string name="total_capital">本金(%s)：</string>
+    <string name="total_win_amount">可赢(%s)：</string>
     <string name="delete_bet">删除</string>
     <string name="btn_login_bet">登录并投注</string>
     <string name="confirm_single_bets">确认%d单注投注</string>
