--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1098,6 +1098,7 @@
     <string name="confirm_multiple_bets">Xác nhận %d Cược xâu</string>
     <string name="btn_remove_closed_selections">Xóa cược đã đóng</string>
     <string name="please_enter_correct_amount">Vui lòng nhập số tiền đặt cược chính xác</string>
+    <string name="bet_info_list_bet">Đặt cược</string>
     <!--endregion-->
 
     <string name="publicity_contact">lLiên hệ</string>
@@ -1182,4 +1183,6 @@
     <string name="hint_file_selected">Đã chọn tập tin</string>
 
     <string name="correct">Kết Quả Đúng</string>
+
+    <string name="hint_bet_limit_range">Giới hạn %1$s-%2$s</string>
 </resources>
