--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1111,6 +1111,7 @@
     <string name="confirm_multiple_bets">确认%d串关投注</string>
     <string name="btn_remove_closed_selections">移除已关闭的选项</string>
     <string name="please_enter_correct_amount">请输入正确投注额</string>
+    <string name="bet_info_list_bet">投注</string>
     <!--endregion-->
 
     <string name="publicity_contact">联络</string>
@@ -1203,4 +1204,6 @@
     <string name="reverse_select">反选</string>
     <string name="video">视频</string>
     <string name="anime">动画</string>
+
+    <string name="hint_bet_limit_range">限额%1$s-%2$s</string>
 </resources>
