--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1112,6 +1112,7 @@
     <string name="confirm_multiple_bets">Confirm %d Multiple Bets</string>
     <string name="btn_remove_closed_selections">Remove closed selections</string>
     <string name="please_enter_correct_amount">Please enter the correct bet amount</string>
+    <string name="bet_info_list_bet">Place Bet</string>
     <!--endregion-->
 
     <string name="publicity_contact">Contact</string>
@@ -1228,4 +1229,6 @@
     <string name="reverse_select">reverse select</string>
     <string name="video">video</string>
     <string name="anime">anim</string>
+
+    <string name="hint_bet_limit_range">Limit %1$s-%2$s</string>
 </resources>
