--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -555,8 +555,8 @@
     <string name="bet_info_odd_content_changed2">赔率已变更，从 %1$s 至 %2$s 。</string>
     <string name="bet_list_single_warn">可用相同的投注额填充所有单项选择</string>
     <string name="bet_list_single">单注</string>
-    <string name="bet_list_single_type">单项</string>
-    <string name="bet_list_parlay_type">串关</string>
+    <string name="bet_list_single_type">单项投注</string>
+    <string name="bet_list_parlay_type">串关投注</string>
     <string name="bet_list_view_more_options">更多投注选项</string>
     <string name="bet_list_cant_parlay_warn">提醒若同一赛事,不同球种,冠军等投注项目不可进行串关</string>
     <string name="bet_list_receipt">注单收据</string>
