--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1206,4 +1206,5 @@
     <string name="anime">动画</string>
 
     <string name="hint_bet_limit_range">限额%1$s-%2$s</string>
+    <string name="submitting">注单提交中</string>
 </resources>
