--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1231,4 +1231,5 @@
     <string name="anime">anim</string>
 
     <string name="hint_bet_limit_range">Limit %1$s-%2$s</string>
+    <string name="submitting">Submitting</string>
 </resources>
