增加搜索赛事页面

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -940,7 +940,7 @@
     <string name="account_hint">(请输入您的会员帐号)</string>
     <string name="submit_success">提交成功</string>
     <!-- 搜尋 -->
-    <string name="text_search">搜索</string>
+    <string name="text_search">搜索赛事</string>
     <string name="text_clear">清除</string>
     <string name="text_search_history">搜索历史</string>
     <string name="text_top_search">热门搜索</string>
