[feature] 新增注單收據，串關UI和對應顯示邏輯

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1207,4 +1207,6 @@
 
     <string name="hint_bet_limit_range">限额%1$s-%2$s</string>
     <string name="submitting">注单提交中</string>
+    <string name="bet_receipt_bet_quota_with_sign">投注金额(%s)：</string>
+    <string name="bet_receipt_win_quota_with_sign">可赢金额(%s)：</string>
 </resources>
