--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1186,4 +1186,7 @@
 
     <string name="hint_bet_limit_range">Giới hạn %1$s-%2$s</string>
     <string name="submitting">Submitting</string>
+    <string name="bet_receipt_bet_quota_with_sign">Tiền Cược(%s)：</string>
+    <string name="bet_receipt_win_quota_with_sign">Số tiền có thể thắng(%s)：</string>
+
 </resources>
