--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1232,4 +1232,6 @@
 
     <string name="hint_bet_limit_range">Limit %1$s-%2$s</string>
     <string name="submitting">Submitting</string>
+    <string name="bet_receipt_bet_quota_with_sign">Stake(%s)：</string>
+    <string name="bet_receipt_win_quota_with_sign">EST winning(%s)：</string>
 </resources>
