--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -66,7 +66,7 @@
     <string name="hint_phone_number">(请输入手机号码)</string>
     <string name="error_phone_number">手机号码格式错误</string>
     <string name="qq_number">QQ号码</string>
-    <string name="hint_qq_number">(请输入QQ账号)</string>
+    <string name="hint_qq_number">请输入QQ账号</string>
     <string name="error_qq_number">QQ账号格式错误</string>
     <string name="e_mail">邮箱</string>
     <string name="hint_e_mail">(请输入邮箱)</string>
